infra/notificaitons-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: notifications-api
  template:
    metadata:
      labels:
        component: notifications-api
    spec:
      containers:
        - name: products-api
          image: laithharb/notifications-api
          ports:
            - containerPort: 5001
