infra/products-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: products-api
  template:
    metadata:
      labels:
        component: products-api
    spec:
      containers:
        - name: products-api
          image: laithharb/products-api:v5
          ports:
            - containerPort: 5002
